# linkedin-intelligence

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/sample/: jobs_sample.jsonl
data/sample/gdpr/: Positions.csv  Profile.csv  Skills.csv  connections.csv  job_applications.csv  messages.csv
docs/: ARCHITECTURE.md  BRANCH_PROTECTION.md  DATA_SOURCES.md
linkedin_intelligence/: __init__.py  cli.py  config.py
linkedin_intelligence/analysis/: __init__.py  portfolio.py  stats.py
linkedin_intelligence/extractors/: __init__.py  skills.py
linkedin_intelligence/parsers/: __init__.py  gdpr.py  profile.py
linkedin_intelligence/providers/: __init__.py  anthropic.py  base.py  deepseek.py  ollama.py
linkedin_intelligence/scrapers/: __init__.py  base.py  jobs.py
scripts/: init_repo.sh  launch_sagemaker.py  sagemaker_entrypoint.sh  setup_github.sh
tests/: conftest.py
tests/unit/: test_gdpr_parser.py  test_profile_parser.py  test_providers.py  test_skills_extractor.py  test_stats.py
