[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linkedin-intelligence"
version = "0.1.0"
description = "CLI tool to analyze the job market from LinkedIn using scraping, GDPR exports, and LLMs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Nicolás Leiva" }]

dependencies = [
    "typer>=0.9",
    "playwright>=1.40",
    "selectolax>=0.3",
    "httpx>=0.25",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "pandas>=2.1",
    "rich>=13.0",
    "tenacity>=8.2",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.8",
    "pre-commit>=3.6",
    "pandas-stubs>=2.1",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "respx>=0.21",
]

[project.scripts]
linkedin-intel = "linkedin_intelligence.cli:app"

[tool.setuptools.packages.find]
include = ["linkedin_intelligence*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["TCH"]

[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
testpaths = ["tests"]
